release 1.15
- Fixed issue JERSEY-769
  http://java.net/jira/browse/JERSEY-769
  jersey-json has multiple dependencies on stax-api, breaks deployment in some circumstances
- Fixed issue JERSEY-1426
  http://java.net/jira/browse/JERSEY-1426
  Bad OSGi manifests for jersey-server and jersey-servlet
- Fixed issue JERSEY-1386
  http://java.net/jira/browse/JERSEY-1386
  Applied the patch from Charlie Groves to unwrap WebApplicationException from the Guice ProvisionException.

release 1.14 (09-2012)
- Fixed issue JERSEY-1400
  http://java.net/jira/browse/JERSEY-1400
  Bad format JSON request got Http200(OK)
- Fixed issue JERSEY-759
  http://java.net/jira/browse/JERSEY-759
  Getting file name from the content disposition header of multi-part messages sent by Internet Explorer was broken.
- Fixed issue JERSEY-1410
  http://java.net/jira/browse/JERSEY-1410
  Added length check (prevents StringIndexOutOfBoundsException)
- Fixed issue JERSEY-1407
  http://java.net/jira/browse/JERSEY-1407
  Licensee bundle now includes JAX-RS sources
- Fixed issue JERSEY-1277
  The web container Grizzly doesn't call anymore the ServletContextListener instances at shutdown
  Grizzly version upgraded to 2.2.16
  Grizzly HTTP Client upgraded to 1.2
- Fixed issue JERSEY-881
  http://java.net/jira/browse/JERSEY-881
  Package name resource config does not work in OSGi environment
- Fixed issue JERSEY-1373
  http://java.net/jira/browse/JERSEY-1373
  Features are lost when configuring PackagesResourceConfig using @ApplicationPath
- Fixed issue JERSEY-1392
  http://java.net/jira/browse/JERSEY-1392
  Jersey Inmemory container rewrites Container Request/Response Filters
- Fixed issue JERSEY-1197
  http://java.net/jira/browse/JERSEY-1197
  Jersey Test Framework constructor fails when given multiple packages
- Fixed issue JERSEY-1336
  http://java.net/jira/browse/JERSEY-1336
  WADL: Matrix params were generated in "request" element, which violates WADL spec; moved
  to resource where it should be.